fix: horizontal scrolling

--- a/src/app.scss
+++ b/src/app.scss
@@ -10,6 +10,11 @@
 
 
 
+html,
+body {
+	overflow-x: hidden;
+}
+
 body {
 	font-family: $font-stack;
 	line-height: 1.6;
